[Signin] Cleanup reconcilor behavior while tokens are not loaded

Bug: 765106
Change-Id: I996d81b304dc114f589de1a9aa0c64a7e7266e58